# qa-automation-portfolio-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  settings.toml  tasks.py
docs/: QASTRATEGY.md
docs/bugs/: bug_1 locked_out_user has no access to saucedemo.com.doc
docs/cases/: case_1 locked_out_user can checkout.doc  case_2 wrong api call.doc
tests/: conftest.py  test_backend_automation_task.py  test_frontend_automation_task.py
