[tool.poetry]
name = "pyexample"
version = "1.0.0"
description = "Coding example!"
authors = ["Viktor Kurti <aplikat@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^2.0.0rc9", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
commitizen = "^2.42.1"
pylint = "^2.17.0"


[tool.poetry.group.pytest.dependencies]
pytest = "^7.2.2"
pytest-repeat = "^0.9.1"
pytest-html = "^3.2.0"
allure-pytest = "^2.13.1"


[tool.poetry.group.api.dependencies]
requests = "^2.28.2"


[tool.poetry.group.ci.dependencies]
invoke = "^2.0.0"
dynaconf = "^3.1.12"


[tool.poetry.group.data.dependencies]
pandas = "^1.5.3"
faker = "^18.3.1"


[tool.poetry.group.test.dependencies]
attrs = "^22.2.0"
assertpy = "^1.1"
cattrs = "^22.2.0"
jsonschema = "^4.17.3"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--alluredir=report/allure_results --html=report/pytest_html.html --self-contained-html"
testpaths = ["tests"]
markers = [
    "smoke",
    "UAT",
    "api",
    "gui",
    "test_id",
    "component",
    "uat",
    "qa",
    "negative",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
version_files = ["pyproject.toml:version"]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
